examples/gateway-api/http-backends.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin-1
  labels:
    type: httpbin-1
spec:
  replicas: 1
  selector:
    matchLabels:
      type: httpbin-1
  template:
    metadata:
      labels:
        type: httpbin-1
    spec:
      automountServiceAccountToken: false
      containers:
      - name: httpbin-1
        image: mccutchen/go-httpbin:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "256Mi"
            cpu: "256m"
          limits:
            memory: "256Mi"
            cpu: "256m"
---
apiVersion: v1
kind: Service
metadata:
  name: httpbin-1
  labels:
    type: httpbin-1
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    type: httpbin-1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin-2
  labels:
    type: httpbin-2
spec:
  replicas: 1
  selector:
    matchLabels:
      type: httpbin-2
  template:
    metadata:
      labels:
        type: httpbin-2
    spec:
      automountServiceAccountToken: false
      containers:
      - name: httpbin-2
        image: mccutchen/go-httpbin:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "256Mi"
            cpu: "256m"
          limits:
            memory: "256Mi"
            cpu: "256m"
---
apiVersion: v1
kind: Service
metadata:
  name: httpbin-2
  labels:
    type: httpbin-2
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    type: httpbin-2
