examples/gateway-api/gateway-kafka.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gravitee-gateway
  annotations:
    cert-manager.io/cluster-issuer: self-signed
    cert-manager.io/usages: "server auth"
    cert-manager.io/subject-organizations: gravitee
    cert-manager.io/common-name: "*.kafka.example.dev"
spec:
  gatewayClassName: gravitee-gateway
  listeners:
    - name: http
      port: 80
      protocol: HTTP
    - name: https
      port: 443
      protocol: HTTPS
      hostname: '*.apis.example.dev'
      tls:
        certificateRefs:
          - group: ""
            kind: Secret
            name: "https-server"
    - name: kafka
      port: 9092
      protocol: TLS
      hostname: '*.kafka.example.dev'
      tls:
        certificateRefs:
          - group: ""
            kind: Secret
            name: "kafka-server"
      allowedRoutes:
        kinds:
        - group: gravitee.io
          kind: KafkaRoute
