examples/gateway-api/http-route-with-request-redirects.yml
# will elude this part in other examples
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route-demo
spec:
  parentRefs:
  - name: gravitee-gateway
    kind: Gateway
    group: gateway.networking.k8s.io
    namespace: default
  hostnames:
   - demo.apis.example.dev
  rules:
    - matches:
       - path:
           type: PathPrefix
           value: /bin
         headers:
          - name: x-rule-match
            type: Exact
            value: first
      filters:
      - type: RequestRedirect
        requestRedirect:
          statusCode: 301
          hostname: httpbin.org
          scheme: https
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /anything
    - matches:
       - path:
           type: PathPrefix
           value: /bin
         headers:
          - name: x-rule-match
            type: Exact
            value: second
      filters:
      - type: RequestRedirect
        requestRedirect:
          statusCode: 302
          hostname: api.gravitee.io
          scheme: https
          path:
            type: ReplaceFullPath
            replaceFullPath: /echo
    - matches:
       - path:
           type: PathPrefix
           value: /bin
         headers:
          - name: x-rule-match
            type: Exact
            value: third
      filters:
      - type: RequestRedirect
        requestRedirect:
          path:
            type: ReplaceFullPath
            replaceFullPath: /404
