examples/gateway-api/http-route-with-traffic-splitting.yaml
# will elude this part in other examples
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route-demo
spec:
  parentRefs:
  - name: gravitee-gateway
    kind: Gateway
    group: gateway.networking.k8s.io
    namespace: default
  hostnames:
   - demo.apis.example.dev
  rules:
    - matches:
       - path:
           type: PathPrefix
           value: /bin
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - kind: Service
          group: ""
          name: httpbin-1
          namespace: default
          port: 8080
          weight: 90
        - kind: Service
          group: ""
          name: httpbin-2
          namespace: default
          port: 8080
          weight: 10
    - matches:
       - path:
           type: PathPrefix
           value: /bin
         headers:
          - name: env
            type: Exact
            value: canary
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - kind: Service
          group: ""
          name: httpbin-2
          namespace: default
          port: 8080
